Fix style for sponsors on small devices

--- a/app/styles/elements/lancie-commission-members.scss
+++ b/app/styles/elements/lancie-commission-members.scss
@@ -7,7 +7,7 @@
     width: calc(50% - 16px);
 
     &.phone {
-      width: 100%;
+      width: calc(100% - 16px);
     }
 
     margin: 0 8px 16px 8px;
